fix: set proper z-index & position for resume-container (#13)

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,11 @@ h4 {
   bottom: 0;
 }
 
+.resume-container {
+  position: relative;
+  z-index: 1;
+}
+
 .personal-container {
   margin: 12px;
   display: flex;
